# teller-banking-integration

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
examples/: simple_fetch.py
scripts/: balance_history.py  balance_history.sh  export.sh  export_csv.py  portfolio.sh  portfolio_with_sp500.py  run.sh  sync.py
teller_integration/: __init__.py  client.py  config.py  models.py
